# dianracing_driverless_recruiting

wanghao1751166/: dianracing_expectation_wanghao.txt  dianracing_homework_wanghao.txt
wanghao1751166/dianracing_projects_wanghao/大作业/: 大作业.opensdf  大作业.sln
wanghao1751166/dianracing_projects_wanghao/大作业/Debug/: 大作业.ilk
wanghao1751166/dianracing_projects_wanghao/大作业/大作业/: managelib.cpp  managelib.h  scoremanage.cpp  student_dat  student_list_dat  大作业.vcxproj  大作业.vcxproj.filters
wanghao1751166/dianracing_projects_wanghao/大作业/大作业/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb  大作业.lastbuildstate
wanghao1751166/dianracing_ros_wanghao/devel/: .catkin  .rosinstall  setup.sh
wanghao1751166/dianracing_ros_wanghao/devel/include/do_math/: Suan.h  SuanRequest.h  SuanResponse.h
wanghao1751166/dianracing_ros_wanghao/devel/lib/do_math/: wanghao_client  wanghao_server
wanghao1751166/dianracing_ros_wanghao/devel/lib/pkgconfig/: do_math.pc  send_messages.pc
wanghao1751166/dianracing_ros_wanghao/devel/lib/send_messages/: wanghao_publisher  wanghao_subscriber
wanghao1751166/dianracing_ros_wanghao/src/do_math/: CMakeLists.txt  package.xml
wanghao1751166/dianracing_ros_wanghao/src/do_math/src/: wanghao_client.cpp  wanghao_server.cpp
wanghao1751166/dianracing_ros_wanghao/src/send_messages/: CMakeLists.txt  package.xml
wanghao1751166/dianracing_ros_wanghao/src/send_messages/src/: wanghao_publisher.cpp  wanghao_subscriber.cpp
(+17 files in other folders)
