cmake_minimum_required(VERSION 2.8.3)
project(send_messages)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs genmsg)
generate_messages(DEPENDENCIES std_msgs)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(wanghao_publisher src/wanghao_publisher.cpp)
target_link_libraries(wanghao_publisher ${catkin_LIBRARIES})
add_dependencies(wanghao_publisher send_messages_generate_messages_cpp)
add_executable(wanghao_subscriber src/wanghao_subscriber.cpp)
target_link_libraries(wanghao_subscriber ${catkin_LIBRARIES})
add_dependencies(wanghao_subscriber send_messages_generate_messages_cpp)
